# DreamVisualizer

./: .env  .gitattributes  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fine_tune_model.py  generate_dream_gif.py  generate_dream_images.py  generate_dream_story.py  generate_enhanced_images.py  inpaint_dream_image.py  modify_dream_image.py  push_to_github.sh  requirements.txt  start.sh
src/: config.rs  image.rs  learning.rs  main.rs  openai.rs  video.rs  web.rs
static/css/: style.css
static/js/: theme.js
templates/: enhanced_images.html  history.html  image_generation.html  index.html  inpaint_image.html  modify_image.html  result.html  video_generation.html
