[package]
name = "dream_visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust application that visualizes dreams using AI"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Web server
axum = { version = "0.6", features = ["multipart"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }

# Template engine
tera = "1.19"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pure Rust image and animation processing
image = "0.24"
gif = "0.12"
webp = "0.2"

# Logging & Error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenv = "0.15"
config = "0.13"

# CLI interface
clap = { version = "4.3", features = ["derive"] }

# Utility
uuid = { version = "1.3", features = ["v4"] }
tempfile = "3.6"
async-trait = "0.1"
base64 = "0.21.0"
chrono = { version = "0.4", features = ["serde"] } 